Add product relation, clean bugs on data relationship, document all
